[gd_scene load_steps=9 format=3 uid="uid://dpf8dp6a5rc3s"]

[ext_resource type="Script" path="res://script/apple_tree.gd" id="1_ov816"]
[ext_resource type="Texture2D" uid="uid://dn0kfp6f8ebfa" path="res://art/survivalgame-appletree.png" id="2_1tk0j"]
[ext_resource type="Resource" uid="uid://c5sx6wkrq3rew" path="res://inventory/items/apple.tres" id="2_o6eus"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85ixf"]
atlas = ExtResource("2_1tk0j")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lteq1"]
atlas = ExtResource("2_1tk0j")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_x43re"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85ixf")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lteq1")
}],
"loop": true,
"name": &"no-apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8qbc"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g6c60"]
radius = 9.0

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_ov816")
item = ExtResource("2_o6eus")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x43re")
animation = &"no-apples"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_h8qbc")

[node name="growth_time" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_g6c60")

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="growth_time" to="." method="_on_growth_time_timeout"]
